--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,10 @@ header {
     padding: 0;
 }
 
+#nav {
+    margin: 0;
+}
+
 .menuitem {
     height: 120px;
     text-align: center;
@@ -91,7 +95,6 @@ header {
     display: block;
     color: #fafafa;
     font-size: 26px;
-
 }
 
 .menuitem span {
@@ -103,4 +106,11 @@ header {
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 2px;
+}
+
+/* ---Hover.CSS--- */
+
+.hvr-sweep-to-bottom::before {
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 120px;
 }
